deploy_yaml/base/ingress.example.yaml

#修改下面的host
#复制该文件,命名为ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bkci-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: 
  - host: devops.bk.example.com     #与bkenv.properties的BKCI_FQDN一致
    http:
      paths:
      - path: /
        backend:
          serviceName: bkci-gateway
          servicePort: 80
